--- a/blog/2023-08-16-contribution/index.mdx
+++ b/blog/2023-08-16-contribution/index.mdx
@@ -9,11 +9,19 @@ import {VisualsMapComponent} from "@site/src/components/Maps/VisualsMapComponent
 
 Au cours de l'été 2023, l'équipe SonarVision a entrepris le projet de cartographier tous les trottoirs et les passages piétons de la ville de Paris.
 
-## Carte interactive
+## Nos contributions
+### Carte interactive
 
 <VisualsMapComponent/>
 
 *Donnée extraite le 14 août 2023 grâce à Overpass : https://overpass-turbo.eu/s/1z0P*
+
+### Tableau récapitulatif
+
+|      Donnée      |   Quantité ajoutée (approx.)   |
+|:----------------:|:------------------------------:|
+| Passages piétons |             20000              |
+|    Trottoirs     | 53000 ou 5000 pâtés de maisons |
 
 ## Pourquoi ?
 
