Embedded demo youtube video in iframe

--- a/blog/2023-08-16-contribution/index.mdx
+++ b/blog/2023-08-16-contribution/index.mdx
@@ -25,11 +25,13 @@ Au cours de l'été 2023, l'équipe SonarVision a entrepris le projet de cartogr
 
 ## Pourquoi ?
 
-Nous développons une application GPS permettant de guider les personnes déficientes visuelles de manière ultra-précise, nommée SonarVision. Afin de proposer des trajets adaptés, qui suivent les trottoirs et empruntent les passages piétons, il était nécessaire de disposer de données piétonnes précises, qui identifient ces trottoirs et passages piétons comme des [**voies séparées**](https://wiki.openstreetmap.org/wiki/FR:Cheminements_pi%C3%A9tons#Trottoir_comme_voie_s%C3%A9par%C3%A9e_(recommand%C3%A9)).
+Nous développons une application GPS permettant de guider les personnes déficientes visuelles de manière ultra-précise, nommée **SonarVision**. Afin de proposer des trajets adaptés, qui suivent les trottoirs et empruntent les passages piétons, il était nécessaire de disposer de données piétonnes précises, qui identifient ces trottoirs et passages piétons comme des [**voies séparées**](https://wiki.openstreetmap.org/wiki/FR:Cheminements_pi%C3%A9tons#Trottoir_comme_voie_s%C3%A9par%C3%A9e_(recommand%C3%A9)).
 
 Grâce à cette donnée, nous pouvons alors guider nos utilisateurs d'un point A à un point B avec une précision de l'ordre du mètre.
 
-[**Visionner la démo de l'application SonarVision**](https://www.youtube.com/watch?v=geGq59f11z0)
+Voici une démonstration de l'application en conditions réelles :
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/geGq59f11z0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
 
 ## Comment ?
 
