Quelques corrections sur l'article Contribution

--- a/blog/2023-08-16-contribution/index.mdx
+++ b/blog/2023-08-16-contribution/index.mdx
@@ -33,7 +33,7 @@ Grâce à cette donnée, nous pouvons alors guider nos utilisateurs d'un point A
 
 ## Comment ?
 
-Avec l'aide précieuse de nos trois stagiaires cet été, nous avons passé plus de 500 heures à virtuellement sillonner les rues de Paris afin d'y ajouter le filaire piéton en conformité avec les [directives](https://wiki.openstreetmap.org/wiki/FR:Cheminements_pi%C3%A9tons) de la communauté OpenStreetMap.
+Avec l'aide précieuse de nos trois stagiaires cet été, nous avons passé plus de 500 heures à virtuellement sillonner les rues de Paris afin d'y ajouter le filaire piéton en conformité avec les [recommandations](https://wiki.openstreetmap.org/wiki/FR:Cheminements_pi%C3%A9tons) de la communauté OpenStreetMap.
 Notre objectif était de compléter un graphe piéton sur lequel nous pourrions exécuter un calculateur d'itinéraire, **qui n'utilise jamais les voies routières, seulement les chemins piétons**. Le pari est réussi et nous pouvons à présent calculer des trajets piétons *accessibles* entre [n'importe quels deux points de la ville de Paris](https://nav.sonarvision.fr/maps/?point=48.847777%2C2.313967&point=48.849234%2C2.336983&profile=foot&layer=OpenStreetMap).
 
 Les travaux réalisés par SonarVision ont été en partie financés par l'[État dans le cadre de France 2030](https://www.economie.gouv.fr/france-2030).
@@ -44,11 +44,11 @@ Les travaux réalisés par SonarVision ont été en partie financés par l'[Éta
 
 Nous n'avons pas fait ce travail seuls !
 
-Nous tenons à remercier l'équipe de [Jungle Bus](https://junglebus.io/en/mobility-open-data-proudly-crafted-by-the-openstreetmap-community-2/) qui nous a conseillé et aidé lors de ce projet. Dans le cadre du projet [Eazyway](https://wiki.openstreetmap.org/wiki/France/Eazyway), ils ont réalisé des [prises d'images 360°](https://www.mapillary.com/app/org/arrow) dans la rue ainsi que de la [cartographie de filaire piéton](https://overpass-turbo.eu/s/1z0N). Leur équipe a fait d'importants travaux de [communication](https://peertube.openstreetmap.fr/w/o5AWXYerrMs7Us7v1YLdCF) et de [documentation](https://wiki.openstreetmap.org/wiki/France/Eazyway) au sujet de la cartographie piétonne. Merci à vous !
+Nous tenons à remercier l'équipe de [Jungle Bus](https://junglebus.io/en/mobility-open-data-proudly-crafted-by-the-openstreetmap-community-2/) qui nous a conseillé et aidé lors de ce projet. Dans le cadre du projet [Eazyway](https://wiki.openstreetmap.org/wiki/France/Eazyway), ils ont réalisé des [prises d'images 360°](https://www.mapillary.com/app/org/arrow) dans la rue ainsi que de la [cartographie de filaire piéton](https://overpass-turbo.eu/s/1z27). Leur équipe a fait d'importants travaux de [communication](https://peertube.openstreetmap.fr/w/o5AWXYerrMs7Us7v1YLdCF) et de [documentation](https://wiki.openstreetmap.org/wiki/France/Eazyway) au sujet de la cartographie piétonne. Merci à vous !
 
 Nous remercions également les nombreux contributeurs OpenStreetMap qui ont participés à la cartographie piétonne parisienne, ainsi qu'à la coexistence de ce nouveau graphe piéton avec les nœuds et voies existantes. Merci en particulier à [Benoît Chaumeret](https://www.openstreetmap.org/user/Beno%C3%AEt%20C%20MdP) pour ses conseils et ses corrections qui nous ont empêchés d'accidentellement casser le graphe cycliste parisien...
 
-## L'Open Data et Open Street Map
+## L'Open Data et OpenStreetMap
 
 Tout notre travail est librement disponible sur [OpenStreetMap (OSM)](https://fr.wikipedia.org/wiki/OpenStreetMap). N'importe qui peut y accéder, l'améliorer, et l'exploiter commercialement. Cette donnée sert déjà à améliorer vos trajets piétons dans des applications grand-public telles qu'Apple Plans, qui [incorpore de la donnée OSM dans ses cartes](https://www.apple.com/legal/internet-services/maps/legal-en.html).
 
