--- a/blog/2023-11-20-sonarvision-v2/index.mdx
+++ b/blog/2023-11-20-sonarvision-v2/index.mdx
@@ -5,14 +5,14 @@ authors: [nathan]
 tags: [sonarvision, guidage, piéton, app, ios, v2, gps, navigation, handicap, aveugle, malvoyant, déficient visuel, déficience visuelle]
 ---
 
-En décembre 2023, nous sortirons la version 2.0 de SonarVision, une application de guidage GPS précise au mètre près, conçu spécifiquement pour les personnes déficientes visuelles. Notre objectif, c'est de proposer un outil permettant aux personnes DV de faire des nouveaux trajets à l’extérieur, en ville, seuls et à pied.
+En décembre 2023, nous sortirons la version 2.0 de SonarVision, une application de guidage GPS précise au mètre près, conçu spécifiquement pour les personnes déficientes visuelles. Notre objectif, c'est de proposer un outil permettant aux personnes déficientes visuelles de faire des nouveaux trajets à l’extérieur, en ville, seuls et à pied.
 
 ## Le geotracking, le futur du GPS haute précision
 
-Nous pensons que le manque de précision dans les GPS mobiles actuels est l’un des principaux freins à la mobilité des personnes DV. Pourtant, depuis plus d’un an, Apple et Google ont tous les deux sortie une nouvelle technologie qui s’appelle le [geotracking](https://developer.apple.com/documentation/arkit/arkit_in_ios/content_anchors/tracking_geographic_locations_in_ar), utile pour la réalité augmentée. Cette technologie, assez révolutionnaire, utilise la caméra du smartphone pour raffiner la position de l’utilisateur au mètre près, notamment grâce aux [images panoramiques](https://support.apple.com/fr-fr/guide/iphone/iph65703a702/ios) prises à 360° dans la rue et géolocalisés très précisément.
-En revanche, ce n’est pas parce qu’on sait maintenant géolocaliser un utilisateur au mètre près, que les GPS deviennent d’un coup accessibles aux utilisateurs DV. Au contraire, il y a peut-être encore plus de problèmes qu’avant !
+Nous pensons que le manque de précision dans les GPS mobiles actuels est l’un des principaux freins à la mobilité des personnes déficientes visuelles. Pourtant, depuis plus d’un an, Apple et Google ont tous les deux sortie une nouvelle technologie qui s’appelle le [geotracking](https://developer.apple.com/documentation/arkit/arkit_in_ios/content_anchors/tracking_geographic_locations_in_ar), utile pour la réalité augmentée. Cette technologie, assez révolutionnaire, utilise la caméra du smartphone pour raffiner la position de l’utilisateur au mètre près, notamment grâce aux [images panoramiques](https://support.apple.com/fr-fr/guide/iphone/iph65703a702/ios) prises à 360° dans la rue et géolocalisés très précisément.
+En revanche, ce n’est pas parce qu’on sait maintenant géolocaliser un utilisateur au mètre près, que les GPS deviennent d’un coup accessibles aux utilisateurs déficients visuels. Au contraire, il y a peut-être encore plus de problèmes qu’avant !
 
-## SonarVision : le geotracking au service des personnes DV
+## SonarVision : le geotracking au service des personnes déficientes visuelles
 
 Nous nous sommes par exemple rendu compte qu’il est extrêmement difficile de générer automatiquement des itinéraires piétons précis au mètre près, c’est-à-dire qui suivent les trottoirs et indiquent le début et la fin des passages piétons. Donc pour le moment, pour vous permettre de profiter de la finesse du geotracking d’Apple, nous avons décidé de vérifier et corriger chacun des trajets de nos utilisateurs manuellement. Cela ne nous prend que quelques minutes avec des outils que nous avons développés spécifiquement pour cet usage, mais pour l’utilisateur, c’est l’assurance d’un trajet de qualité.
 
@@ -35,11 +35,11 @@ Je sais que les nouvelles applications sont nombreuses et qu’elles ont tendanc
 
 ## La version 2.0
 
-À présent, nous sommes en train de finaliser la version 2 qui sera elle aussi disponible en beta fermée à Paris uniquement. Nous sommes donc à la recherche de 20 parisiens qui souhaitent rejoindre l’équipe de beta-testeurs. Si vous habitez à Paris et que vous disposez d’un iPhone compatible, je me déplacerais personnellement pour vous montrer l’application, faire avec vous un trajet d’essai et répondre à toutes vos questions. Vous pourrez décider ensuite si vous souhaitez ou non vous abonner à une formule pour continuer à demander des trajets.
+À présent, nous sommes en train de finaliser la version 2 qui sera, elle aussi, disponible en beta fermée à Paris uniquement. Nous sommes donc à la recherche de 20 parisiens qui souhaitent rejoindre l’équipe de beta-testeurs. Si vous habitez à Paris et que vous disposez d’un iPhone compatible, je me déplacerais personnellement pour vous montrer l’application, faire avec vous un trajet d’essai et répondre à toutes vos questions. Vous pourrez décider ensuite si vous souhaitez ou non vous abonner à une formule pour continuer à demander des trajets.
 
-Pour me contacter afin d’organiser un rendez-vous ou simplement en savoir plus, vous pouvez me contacter directement à l'adresse contact@sonarvision.fr
+Pour me contacter afin d’organiser un rendez-vous ou simplement en savoir plus, vous pouvez m'écrire directement à l'adresse contact@sonarvision.fr
 
-## Quelques liens
+## Pour aller plus loin
 
 Finalement, voici deux liens : le premier vers notre [démonstration audio et vidéo sur Youtube](https://www.youtube.com/watch?v=geGq59f11z0) avec notre tout premier utilisateur, Sébastien Hinderer, qui fait un trajet d’un arrêt de bus vers sa salle de sport, le deuxième lien [vers un épisode d’Oxytude](https://www.oxytude.org/interview-sonarvision-une-application-de-guidage-pieton-precise-a-1-metre/), ou nous parlons en détail de tous les aspects de l’appli.
 
