--- a/blog/2023-11-20-sonarvision-v2/index.mdx
+++ b/blog/2023-11-20-sonarvision-v2/index.mdx
@@ -9,12 +9,13 @@ En décembre 2023, nous sortirons la version 2.0 de SonarVision, une application
 
 ## Le geotracking, le futur du GPS haute précision
 
-Nous pensons que le manque de précision dans les GPS mobiles actuels est l’un des principaux freins à la mobilité des personnes déficientes visuelles. Pourtant, depuis plus d’un an, Apple et Google ont tous deux sorti une nouvelle technologie appelée le [geotracking](https://developer.apple.com/documentation/arkit/arkit_in_ios/content_anchors/tracking_geographic_locations_in_ar), utile pour la réalité augmentée. Cette technologie, assez révolutionnaire, utilise la caméra du smartphone pour raffiner la position de l’utilisateur au mètre près, notamment grâce aux [images panoramiques](https://support.apple.com/fr-fr/guide/iphone/iph65703a702/ios) prises à 360° dans la rue et géolocalisées très précisément.
+Nous pensons que le manque de précision dans les GPS mobiles actuels est l’un des principaux freins à la mobilité des personnes déficientes visuelles. Pourtant, depuis plus d’un an, Apple et Google ont tous deux sorti une nouvelle technologie appelée le [geotracking](https://developer.apple.com/documentation/arkit/arkit_in_ios/content_anchors/tracking_geographic_locations_in_ar), utile pour la réalité augmentée. Cette technologie, assez révolutionnaire, utilise la caméra du smartphone pour raffiner la position de l’utilisateur au mètre près, notamment grâce aux [images panoramiques](https://support.apple.com/fr-fr/guide/iphone/iph65703a702/ios) prises à 360° dans la rue et géolocalisées très précisément. Elle permet aussi de calibrer l'orientation de l'appareil : fini les débuts de trajets dans la mauvaise direction !
+
 Toutefois, même si nous pouvons maintenant localiser un utilisateur au mètre près, cela ne signifie pas que les GPS sont instantanément adaptés aux besoins des utilisateurs déficients visuels. Au contraire, il y a peut-être encore plus de problèmes qu’avant !
 
 ## SonarVision : le geotracking au service des personnes déficientes visuelles
 
-Nous nous sommes par exemple rendu compte qu’il est extrêmement difficile de générer automatiquement des itinéraires piétons précis au mètre près, c’est-à-dire qui suivent les trottoirs et indiquent le début et la fin des passages piétons. Donc pour le moment, pour vous permettre de profiter de la finesse du geotracking d’Apple, nous avons décidé de vérifier et corriger chacun des trajets de nos utilisateurs manuellement. Cela ne nous prend que quelques minutes avec des outils que nous avons développés spécifiquement pour cet usage, mais pour l’utilisateur, c’est l’assurance d’un trajet de qualité.
+Nous nous sommes par exemple rendu compte qu’il est extrêmement difficile de générer automatiquement des itinéraires piétons précis au mètre près, c’est-à-dire qui suivent les trottoirs et indiquent le début et la fin des passages piétons. Donc pour le moment, pour vous permettre de profiter de la finesse du geotracking d’Apple, nous avons décidé de vérifier et corriger chacun des trajets de nos utilisateurs manuellement. Cela ne nous prend que quelques minutes avec des outils que nous avons développés spécifiquement pour cet usage, tel que notre [calculateur d'itinéraires qui utilise des données OpenStreetMap](./graphe-pieton-parisien). Pour l’utilisateur, en revanche, c’est l’assurance d’un trajet de qualité.
 
 Bon, en quelques mots, comment fonctionne SonarVision ?
 - On commence par demander un trajet avec un formulaire accessible.
@@ -30,7 +31,8 @@ Cependant, SonarVision n’est pas l’outil parfait pour tout le monde, du moin
 - Vérifier les trajets à la main prend du temps et est donc coûteux, un abonnement à SonarVision coûte entre 20€ et 40€ par mois.
 - C’est une application en évolution rapide, il y a donc occasionnellement des bugs.
 
-Cela étant dit, nos clients - qui parviennent à utiliser l’application malgré ses contraintes - disent qu’il s’agit d’un guidage d’une précision inégalée, et qu’ils peuvent maintenant faire de nouveaux trajets en complète autonomie.
+Cela étant dit, nos clients - qui parviennent à utiliser l’application malgré ses contraintes - disent qu’il s’agit d’un guidage d’une précision inégalée, et qu’ils peuvent maintenant faire de nouveaux trajets en complète autonomie. Aujourd'hui, SonarVision est la seule application accessible qui permette d'utiliser le geotracking pour faire des trajets piétons précis au mètre près.
+
 Je sais que les nouvelles applications sont nombreuses et qu’elles ont tendance à promettre beaucoup. J’espère vous convaincre que nous ne voulons pas faire les choses à moitié et que nous préférons servir correctement un petit nombre d’utilisateurs que de mal accueillir tout le monde. Nous avons par exemple pris le temps pour faire les tests alpha avec un tout petit groupe de six clients pendant presque 12 mois. Tous ont largement contribué à l’amélioration de l’application de jour en jour et nous les en remercions.
 
 ## La version 2.0
