--- a/blog/2023-11-20-sonarvision-v2/index.mdx
+++ b/blog/2023-11-20-sonarvision-v2/index.mdx
@@ -15,7 +15,7 @@ Toutefois, même si nous pouvons maintenant localiser un utilisateur au mètre p
 
 ## SonarVision : le geotracking au service des personnes déficientes visuelles
 
-Nous nous sommes par exemple rendu compte qu’il est extrêmement difficile de générer automatiquement des itinéraires piétons précis au mètre près, c’est-à-dire qui suivent les trottoirs et indiquent le début et la fin des passages piétons. Donc pour le moment, pour vous permettre de profiter de la finesse du geotracking d’Apple, nous avons décidé de vérifier et corriger chacun des trajets de nos utilisateurs manuellement. Cela ne nous prend que quelques minutes avec des outils que nous avons développés spécifiquement pour cet usage, tel que notre [calculateur d'itinéraires qui utilise des données OpenStreetMap](./graphe-pieton-parisien). Pour l’utilisateur, en revanche, c’est l’assurance d’un trajet de qualité.
+Nous nous sommes par exemple rendu compte qu’il est extrêmement difficile de générer automatiquement des itinéraires piétons précis au mètre près, c’est-à-dire qui suivent les trottoirs et indiquent le début et la fin des passages piétons. Donc pour le moment, pour vous permettre de profiter de la finesse du geotracking d’Apple, nous avons décidé de vérifier et corriger chacun des trajets de nos utilisateurs manuellement. Cela ne nous prend que quelques minutes avec des outils que nous avons développés spécifiquement pour cet usage, tel que notre [calculateur d'itinéraires qui utilise des données OpenStreetMap](../2023-08-16-contribution/index.mdx). Pour l’utilisateur, en revanche, c’est l’assurance d’un trajet de qualité.
 
 Bon, en quelques mots, comment fonctionne SonarVision ?
 - On commence par demander un trajet avec un formulaire accessible.
